tests/fixtures/validate/lenient/invalid/invalid-garbage-1.yini
^ App
title = "My App"
enabled = ON

??? this is garbage ???   // ERROR: garbage / unrecognized line

version = "1.0.0"
